--- a/WorldsGreatestBankLedger/WorldsGreatestBankLedger.csproj
+++ b/WorldsGreatestBankLedger/WorldsGreatestBankLedger.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
-    <Compile Include="DBWork.cs" />
+    <Compile Include="SQL_Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
