Added app.config for DB Connection

--- a/WorldsGreatestBankLedger/App.config
+++ b/WorldsGreatestBankLedger/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+  <connectionStrings>
+    <!-- SQL DB (uncomment the appropriate connectionString-->
+    <add name="dbCon" connectionString="Data Source=BELDZB15U31619\MSSQLSERVER2017;
+                                        Initial Catalog=WorldsGreatestBankingLedger;
+                                        Integrated Security=True" />
+    <!--
+    <add name="dbCon" connectionString="Data Source = localhost; 
+                                        Initial Catalog = WorldsGreatestBankingLedger; 
+                                        Integrated Security = True" />
+    -->
+  </connectionStrings>
 </configuration>
